<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.samsun81.hayamohamedclothes.SignUp"
    android:background="@drawable/nice">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/save"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="147dp"
            tools:layout_editor_absoluteY="230dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="77dp" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView5"
            app:srcCompat="@mipmap/smileeee" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="99dp"
            android:ems="10"
            android:hint="@string/password1"
            android:inputType="textPassword"
            android:selectAllOnFocus="false"
            android:singleLine="false"
            android:textColorHint="?attr/actionMenuTextColor"
            android:textColorLink="@android:color/holo_blue_dark"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="101dp" />

        <EditText
            android:id="@+id/etRe"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/etPassword"
            android:layout_marginTop="17dp"
            android:ems="10"
            android:hint="@string/repassword"
            android:inputType="textPassword"
            android:textColorHint="?android:attr/colorControlActivated"
            android:textColorLink="@color/colorPrimary"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="159dp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_above="@+id/etRe"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="46dp"
            android:contentDescription="@string/EMAIL"
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textColorHint="?android:attr/textColorTertiary"
            android:textColorLink="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="17dp"
            tools:layout_editor_absoluteY="33dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etRe"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:text="@string/welcome_to_our_app"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="18sp" />

    </RelativeLayout>

</LinearLayout>
