<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/crosstheline_sky_winter_blue_grande"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imvSet"
            android:layout_width="match_parent"
            android:layout_height="248dp"
            android:layout_alignParentTop="true"
            android:backgroundTint="@color/common_google_signin_btn_text_dark_default"
            app:srcCompat="@android:drawable/ic_menu_report_image" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imvSet"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layerType="none"
            android:text="@string/name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvWather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:text="@string/wather"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvOccasion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvWather"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/occasion2"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btVote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tvYes"
            android:background="@android:drawable/alert_light_frame"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/share_to_vote"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tvOccasion"
            android:layout_marginLeft="14dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="46dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView"
            android:layout_toEndOf="@+id/tvName"
            android:layout_toRightOf="@+id/tvName" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tvOccasion"
            android:layout_marginEnd="46dp"
            android:layout_toStartOf="@+id/tvOccasion"
            app:srcCompat="@mipmap/like" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tvOccasion"
            android:layout_marginStart="53dp"
            android:layout_toEndOf="@+id/tvOccasion"
            app:srcCompat="@mipmap/no" />

        <TextView
            android:id="@+id/tvYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/imageView8"
            android:layout_below="@+id/imageView8"
            android:text="0"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/imageView9"
            android:layout_below="@+id/imageView9"
            android:text="0"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

</LinearLayout>